# githubctl

./: .env.example  pyproject.toml  q
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml
githubctl/: github.py  main.py  options.py  utils.py
githubctl/.github/workflows/: publish-to-pypi.yml
githubctl/cli/: repo.py  user.py
